# abs-tpc-accelerated

./: README.md
fletcher/runtime/cpp/: CMakeLists.txt
fletcher/runtime/cpp/include/fletcher/: context.h  platform.h
fletcher/runtime/cpp/src/fletcher/: kernel.cc  platform.cc
native_root/: CMakeLists.txt
native_root/arrow/: ColumnScheduler.cpp  DataSetParquetReader.cpp  FileReader.cpp  FletcherParquetReader.cpp  JNIFletcherParquetReader.cpp  PlatformWrapper.cpp
native_root/arrow/include/: ColumnScheduler.h  FileReader.h  FletcherParquetReader.h  Macro.h  PlatformWrapper.h  Tpch.h  Util.h
native_root/include/: tpc_spark_arrow_fletcher_FletcherParquetReaderIterator.h  tpc_spark_arrow_fletcher_FletcherProcessor_BufferDescriptor__.h
native_root/jni/include/: Assertions.h
native_root/proto/: Types_.pb.cc  Types_.pb.h
root/: cp.txt  dep.txt  excludes.txt  extract.txt  jar_entries.txt  pom.xml
root/app/: cp.txt  cpapp.txt  pom.xml
root/app/src/main/scala/tpc/spark/fletcher/app/: App.scala
root/app/src/main/scala/tpc/spark/fletcher/app/utils/: Sparkutils.scala
root/native/: cp.txt  pom.xml
root/native/src/main/cpp/: ColumnScheduler.h  DataSetParquetReader.cpp  DataSetParquetReader.h  FileReader.h  JNIFletcherParquetReader.cpp  Tpch.h  Util.h  prim64.cpp.tmp
root/native/src/main/cpp/jni/: Assertions.h  Converters.cpp  JavaMemoryPool.cpp
root/native/src/main/include/: tpc_spark_arrow_fletcher_FletcherParquetReader.h  tpc_spark_arrow_fletcher_FletcherProcessor.h  tpc_spark_arrow_fletcher_FletcherProcessor_BufferDescriptor.h  tpc_spark_arrow_fletcher_NativeParquetReader.h  tpc_spark_arrow_fletcher_PlatformWrapper.h
root/processor/: cp.txt  cpapp.txt  pom.xml
root/processor/src/main/scala/tpc/spark/arrow/fletcher/: FletcherParquetReaderIterator.scala
root/spark_extension/: pom.xml
root/spark_extension/src/main/scala/org/apache/spark/sql/: SparkArrowUtils.scala
root/utilities/: pom.xml
root/utilities/src/main/scala/tpc/spark/fletcher/utilities/: CLIUtils.scala  ColumnUtils.scala  QueryUtils.scala  ScoptUtils.scala  Sparkutils.scala
(+2 files in other folders)
